--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
+    "superagent": "^8.0.9",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
