--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_URL=https://fastapi-production-f55e.up.railway.app/
+NEXT_PUBLIC_API_URL=https://niblu-cors.up.railway.app/https://fastapi-production-f55e.up.railway.app
