--- a/.env.development.local
+++ b/.env.development.local
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_URL=https://niblu-cors.up.railway.app/https://localhost:3000
+NEXT_PUBLIC_API_URL=https://niblu-cors.up.railway.app/https://fastapi-production-f55e.up.railway.app
