--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
     "superagent": "^8.0.9",
+    "swr": "^2.1.0",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
