--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "date-fns": "^2.29.3",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
+    "jsonwebtoken": "^9.0.0",
     "next": "latest",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.8.2",
