--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "gray-matter": "^4.0.3",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
-    "next": "latest",
+    "next": "^13.2.4",
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
