--- a/.env.development.local
+++ b/.env.development.local
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_API_URL=https://niblu-cors.up.railway.app/https://fastapi-production-f55e.up.railway.app
+NEXT_PUBLIC_API_URL=https://niblu-cors.up.railway.app/https://courseapi.up.railway.app/
+MONGO_CONN=mongodb://mongo:PjlT0VK5tQvyTWxCKdNm@containers-us-west-54.railway.app:6377
