--- a/.env.production.local
+++ b/.env.production.local
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_API_URL=https://niblu-cors.up.railway.app/https://courseapi.up.railway.app/
-MONGO_CONN=mongodb://mongo:PjlT0VK5tQvyTWxCKdNm@containers-us-west-54.railway.app:6377
+MONGO_URL=mongodb://mongo:PjlT0VK5tQvyTWxCKdNm@containers-us-west-54.railway.app:6377
