--- a/.env.development.local
+++ b/.env.development.local
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL=https://niblu-cors.up.railway.app/https://localhost:8000/auth/token
+NEXT_PUBLIC_API_URL=http://localhost:8000
 MONGO_URL=mongodb://mongo:PjlT0VK5tQvyTWxCKdNm@containers-us-west-54.railway.app:6377
