--- a/.env.development.local
+++ b/.env.development.local
@@ -1,4 +1,3 @@
-NEXT_PUBLIC_API_URL=https://niblu-cors.up.railway.app/https://courseapi.up.railway.app/
 
 MONGO_URL = mongodb://mongo:PjlT0VK5tQvyTWxCKdNm@containers-us-west-54.railway.app:6377
 MONGOPORT = 6637
@@ -13,5 +12,5 @@ SMTP_PORT = 587
 
 REDIS_URL = redis://default:EzFiqMnlrwdg1nxM9EvQ@containers-us-west-121.railway.app:7805
 
-APP_URL = http://localhost:8000
+API_URL = http://localhost:8000
 FRONT_URL = http://localhost:3000
