--- a/.env.production.local
+++ b/.env.production.local
@@ -12,5 +12,5 @@ SMTP_PORT = 587
 
 REDIS_URL = redis://default:EzFiqMnlrwdg1nxM9EvQ@containers-us-west-121.railway.app:7805
 
-API_URL = http://localhost:8000
-FRONT_URL = http://localhost:3000
+API_URL = http://127.0.0.1:8000
+FRONT_URL = http://127.0.0.1:3000
