--- a/.env.development.local
+++ b/.env.development.local
@@ -12,5 +12,5 @@ SMTP_PORT = 587
 
 REDIS_URL = redis://default:EzFiqMnlrwdg1nxM9EvQ@containers-us-west-121.railway.app:7805
 
-NEXT_PUBLIC_API_URL = https://courseapi.up.railway.app/docs
+NEXT_PUBLIC_API_URL =https://courseapi.up.railway.app/
 FRONT_URL = https://clever-pika-6ab384.netlify.app/
